quoting-CypressTK1/force-app/main/default/objects/CloneSchemaField__mdt/CloneSchemaField__mdt.object-meta.xml
<CustomObject>
    <label>Clone Schema Field</label>
    <pluralLabel>Clone Schema Fields</pluralLabel>
</CustomObject>