quoting-CypressTK1/force-app/main/default/objects/CloneSchemaField__mdt/fields/CloneSchemaId__c.field-meta.xml
<CustomField>
    <fullName>CloneSchemaId__c</fullName>
    <label>Clone Schema</label>
    <referenceTo>CloneSchema__mdt</referenceTo>
    <relationshipLabel>Clone Schema Fields</relationshipLabel>
    <relationshipName>CloneSchemaFields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>