quoting-CypressTK1/force-app/main/default/objects/CloneSchemaField__mdt/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <label>Field Api Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>