quoting-CypressTK1/force-app/main/default/objects/CloneSchemaField__mdt/fields/MergeValue__c.field-meta.xml
<CustomField>
    <fullName>MergeValue__c</fullName>
    <label>Merge Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>